fix(ios): 🐛 Remove bottom safe area gap

--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,6 @@ input[type='submit'] {
 }
 
 .app-safe-area-panel {
-  padding-bottom: env(safe-area-inset-bottom);
   padding-top: env(safe-area-inset-top);
 }
 
